--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -21,6 +21,14 @@
   </div>
 </div>
 
+<!-- app/views/articles/index.html.erb -->
+<%= cl_image_tag("lge5wmhjnb2ulcppv3zm",
+      width: 400, height: 300, crop: :fill) %>
+
+<!-- for face detection -->
+<%= cl_image_tag("lge5wmhjnb2ulcppv3zm",
+      width: 150, height: 150, crop: :thumb, gravity: :face) %>
+
 
 
       
