--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -2,9 +2,12 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-      <h1>Create a new Cocktails</h1>
+      <h2>Create a new Cocktail</h2>
           <%= simple_form_for(@cocktail) do |f| %>
             <%= f.input :name %>
+            
+            <%= f.input :photo, as: :file%>
+
             <%= f.submit "add a cocktail", class: "btn btn-primary" %>
           <% end %>
     </div>
